--- a/vercel.json
+++ b/vercel.json
@@ -24,8 +24,11 @@
       "dest": "/api/$1"
     },
     {
-      "src": "/(.*\\.(css|js|png|jpg|jpeg|gif|svg|ico|webp|avif|woff|woff2|ttf|eot|json|xml|txt))",
-      "dest": "/$1"
+      "src": "/(.*\\.(css|js))",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
     },
     {
       "src": "/(.*)",
